tests/ui/const-generics/invalid-attributes-on-const-params-78957.stderr
error: `#[inline]` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:6:16
   |
LL | pub struct Foo<#[inline] const N: usize>;
   |                ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[repr]` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:11:16
   |
LL | pub struct Baz<#[repr(C)] const N: usize>;
   |                ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[inline]` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:14:17
   |
LL | pub struct Foo2<#[inline] 'a>(PhantomData<&'a ()>);
   |                 ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[repr]` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:19:17
   |
LL | pub struct Baz2<#[repr(C)] 'a>(PhantomData<&'a ()>);
   |                 ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[inline]` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:22:17
   |
LL | pub struct Foo3<#[inline] T>(PhantomData<T>);
   |                 ^^^^^^^^^
   |
   = help: `#[inline]` can only be applied to functions

error: `#[repr]` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:27:17
   |
LL | pub struct Baz3<#[repr(C)] T>(PhantomData<T>);
   |                 ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[cold]` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:8:16
   |
LL | pub struct Bar<#[cold] const N: usize>;
   |                ^^^^^^^
   |
   = help: `#[cold]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/invalid-attributes-on-const-params-78957.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: `#[cold]` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:16:17
   |
LL | pub struct Bar2<#[cold] 'a>(PhantomData<&'a ()>);
   |                 ^^^^^^^
   |
   = help: `#[cold]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: `#[cold]` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:24:17
   |
LL | pub struct Bar3<#[cold] T>(PhantomData<T>);
   |                 ^^^^^^^
   |
   = help: `#[cold]` can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 9 previous errors

